# toronto-election-poll-tracker-data

./: .gitignore  pyproject.toml  toronto-2026-model-spec.md
.github/workflows/: update-model.yml
backend/model/: aggregator.py  candidates.py  chow_pressure.py  coattails.py  lean.py  names.py  phase.py  pool.py  run.py  simulation.py  snapshot.py  validate.py
data/processed/: approval_ratings.csv  challengers.csv  coattail_adjustments.csv  council_alignment.csv  councillor_registered.csv  defeatability_full.csv  mayor_registered.csv  mayoral_polling_average.csv  mayoral_results.csv  model_snapshot.json  polls.csv  polls_snapshot.json  registered_electors.csv  ward_defeatability.csv  ward_mayoral_lean.csv  ward_polls.csv  ward_population_growth.csv
data/raw/candidates/: SCHEMA.md  challengers.csv  councillor_registered.csv  councillor_registered.json  mayor_registered.csv  mayor_registered.json
data/raw/census/: SCHEMA.md  ward_population.csv  ward_population.json
data/raw/council_votes/: SCHEMA.md  council_alignment.csv
data/raw/defeatability/: SCHEMA.md  data-qT4Kx.csv  ward_defeatability.csv
data/raw/elections/: mayoral_results.json  (+1 more)
scripts/: build_snapshot.py  derive_ward_poll_win_share.py  fetch_candidates.py  fetch_elections.py  fetch_financials.py  fetch_polls.py  fetch_ward_profiles.py  process_all.py  simulate.py
tests/model/: test_aggregator.py  test_candidates.py  test_coattails.py  test_fetch_candidates.py  test_phase.py  test_pool.py  test_process_all.py  test_run.py  test_simulation.py  test_validate.py
tests/scripts/: test_fetch_polls.py
(+8 files in other folders)
