[project]
name = "data-ingestion"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.3",
    "lxml>=6.1.0",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "pandas",
    "pydantic",
    "requests",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest",
]
